[BI] 2.77 World texture has no reaction to parented camera rotation #47753

Closed
opened 2016-03-11 01:39:27 +01:00 by Vik · 8 comments

System Information
Windows 7 x64, Phenom II, 8GB, Radeon R9 270 (Driver Packaging Version 15.30.1025-151117a-296575C)

Blender Version
Broken: 2.77-rc2 , 2.77 02cabda (dev build https://builder.blender.org/download/blender-2.77-02cabda-win64.zip)
Worked: 2.76b (f337fea) and all earlier

Short description of error
proofpicture: http://i.imgur.com/eyUhh2o.png
rendered by BI camera fly in rotation, objects are rotated as they must, but worldmap background stay still and has no move with all
GrenadeMK-2_packed.blend
Not so short description of error
Then you use Blender internal render (not cycles - no no) , has where world texture image with Equirectangular mapping (maybe not only that i think) and Camera attached to something what has rotation ("animated" calling be?)

  • background world texture on rendered image will no has an any transformation as it rendered with simple still background cropped picture with view-mapping or some of it/

Then camera is disattached from parent is seems working right (has visual difference in angles with displayed in viewport, but for me it is not critical now )

Exact steps for others to reproduce the error

  1. open attached scene
  2. call render image by some standard way. wait for it stop eat CPU
  3. scratch time slider some over random frame with meaning change of camera angle (seen it on viewport)
  4. change Slot if render result fom 2 to some different
  5. Render again and wait it
  6. swap around render slots and watch - objects are rotated but background is still the same, if you repeat all steps in older builds background would be correctly transformed by rotation

*i'm not brain damaged, just bad knowledge of language, sorry

**System Information** Windows 7 x64, Phenom II, 8GB, Radeon R9 270 (Driver Packaging Version 15.30.1025-151117a-296575C) **Blender Version** Broken: 2.77-rc2 , 2.77 02cabda (dev build https://builder.blender.org/download/blender-2.77-02cabda-win64.zip) Worked: 2.76b (f337fea) and all earlier **Short description of error** proofpicture: http://i.imgur.com/eyUhh2o.png rendered by BI camera fly in rotation, objects are rotated as they must, but worldmap background stay still and has no move with all [GrenadeMK-2_packed.blend](https://archive.blender.org/developer/F289393/GrenadeMK-2_packed.blend) **Not so short description of error** Then you use Blender internal render (not cycles - no no) , has where world texture image with Equirectangular mapping (maybe not only that i think) and Camera attached to something what has rotation ("animated" calling be?) - > background world texture on rendered image will no has an any transformation as it rendered with simple still background cropped picture with view-mapping or some of it/ Then camera is disattached from parent is seems working right (has visual difference in angles with displayed in viewport, but for me it is not critical now ) **Exact steps for others to reproduce the error** 1) open attached scene 2) call render image by some standard way. wait for it stop eat CPU 3) scratch time slider some over random frame with meaning change of camera angle (seen it on viewport) 4) change Slot if render result fom 2 to some different 5) Render again and wait it 6) swap around render slots and watch - objects are rotated but background is still the same, if you repeat all steps in older builds background would be correctly transformed by rotation *i'm not brain damaged, just bad knowledge of language, sorry
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @V-11

Added subscriber: @V-11

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I can confirm this here.
(win10 64bits)

I can confirm this here. (win10 64bits)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Confirmed, 5371102039 caused this.

However 2.76b behavior doesn't match Cycles or new viewport code.

Have a fix which beings this in line with Cycles/Viewport, but investigating D1729 - to see why this change was made.

Confirmed, 5371102039 caused this. However 2.76b behavior doesn't match Cycles or new viewport code. Have a fix which beings this in line with Cycles/Viewport, but investigating [D1729](https://archive.blender.org/developer/D1729) - to see why this change was made.

This issue was referenced by c149b6b7d7

This issue was referenced by c149b6b7d72f9d399a8e49160be8a2788b3f2c0e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47753
No description provided.